<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by "옴마야" Team 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/mash-up-kr/WeQuiz-Android/blob/main/LICENSE
  -->

<resources>
    <!-- 공통 -->
    <string name="string_go_back">뒤로 가기</string>
    <string name="cancel">취소</string>
    <string name="next">다음</string>
    <string name="delete">삭제</string>
    <string name="negative">아니요</string>
    <string name="home">홈</string>
    <string name="name">이름</string>
    <string name="finish">완료</string>
    <string name="report">신고</string>

    <!-- 인트로 -->
    <string name="start_we_quiz">WeQuiz 시작하기</string>
    <string name="already_have_account">이미 계정이 있나요?</string>
    <string name="sign_up">회원가입</string>
    <string name="login">로그인</string>
    <string name="phone_sign_up_mode_title">회원가입을 위해\n휴대폰 번호를 입력해 주세요</string>
    <string name="phone_log_in_mode_title">반가워요!\n휴대폰 번호로 로그인 해주세요</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="phone_number_hint">휴대폰 번호 입력</string>
    <string name="request_verify_code">인증번호 받기</string>
    <string name="verify_code_title">휴대폰 인증번호를\n입력해 주세요</string>
    <string name="verify_code">인증번호</string>
    <string name="verify_code_hint">6자리 숫자</string>
    <string name="verify_code_time_out">인증번호 시간이 만료됐어요\n재전송을 눌러 다시 시도해 주세요</string>
    <string name="verify_code_incorrect">인증번호가 올바르지 않아요</string>
    <string name="verify_code_resend">인증번호를 재전송했어요</string>
    <string name="verify_code_resend_time_out">인증번호가 만료됐어요. 다시 시도해 주세요</string>
    <string name="sign_up_dialog">가입되지 않은 휴대폰 번호에요\n회원가입을 도와드릴까요?</string>
    <string name="join_title">WeQuiz에서 사용 할\n닉네임을 입력해 주세요</string>
    <string name="introduction"><font color="#E9ECEF">자기소개</font> <font color="#ADB5BD">(선택)</font></string>
    <string name="introduction_hint">자기소개 입력</string>
    <string name="nickname"><font color="#E9ECEF">닉네임</font> <font color="#FF5D47">(필수)</font></string>
    <string name="nickname_hint">닉네임 입력</string>
    <string name="welcome_comment">반가워요\n%1$s</string>
    <string name="send_verify_code_failure">인증번호 전송에 실패했습니다</string>
    <string name="invalid_phone_number_error">전화번호를 다시 확인해주세요</string>
    <string name="too_many_requests_error">일일 SMS 전송 가능 횟수 초과</string>
    <string name="network_error">네트워크 에러</string>

    <!-- 문제 만들기 -->
    <string name="create_quiz">문제 만들기</string>
    <string name="edit_order">순서 편집</string>
    <string name="untitled_quiz">제목없는 시험지</string>
    <string name="complete_quiz">시험지 완성하기</string>
    <string name="index_answer">답변 인덱스</string>
    <string name="enter_answer">답변 입력</string>
    <string name="add_answer">답변 추가</string>
    <string name="add_question">질문 추가</string>
    <string name="enter_question">문제 입력</string>
    <string name="allow_duplication">중복 선택여부</string>
    <string name="delete_question">문제삭제</string>
    <string name="delete_question_text">문제를 삭제할까요?</string>
    <string name="delete_question_noftify">문제를 삭제했어요</string>
    <string name="share_quiz">친구들에게 시험지 공유하기</string>
    <string name="finish_create_quiz">Wequiz\n 시험지를 완성했어요!</string>

    <!-- 문제 풀기 -->
    <string name="score_unit">점</string>
    <string name="result_subtitle">%1$s와 %2$s는</string>
    <string name="result_title1">지금 싸우자는 거지?</string>
    <string name="result_title2">그냥 얼굴만 아는 사이</string>
    <string name="result_title3">우리 정도면 친한편이지?</string>
    <string name="result_title4">찐친 그자체라구!</string>
    <string name="result_title5">영혼을 공유한 사이❤️</string>
    <string name="result_sign_up">1분만에 가입해서 친구한테 문제내기 🗯</string>
    <string name="retry_quiz">다시 풀기</string>
    <string name="share_result">공유하기</string>
    <string name="fetch_fail_text">문제 불러오기 실패</string>
    <string name="quiz_deleted_text">삭제된 시험지에요 🥶</string>
    <string name="area">영역</string>
    <string name="quiz_code">수험번호</string>
    <string name="start_quiz">시험 응시하기</string>
    <string name="add_nickname">친구가 알 수 있게\n본인의 이름을 적어주세요</string>
    <string name="name_hint">이름 입력</string>
    <string name="name_require"><font color="#E9ECEF">이름</font> <font color="#FF5D47">(필수)</font></string>
    <string name="join_ad_text">1분만에 가입해서 친구한테 문제내기🗯</string>
    <string name="do_report">신고하기</string>
    <string name="remaining_problem">%d문제 중 %d번째 문제</string>
    <string name="answer_count">답 %d개</string>
    <string name="score">%d점</string>
    <string name="quiz_title">%s 시험지</string>
    <string name="quiz_num">제 %d회</string>
    <string name="user_code_snippet">#%s</string>
    <string name="report_question_text">문제를 신고할까요?</string>
    <string name="report_question_finish">문제 신고가 완료되었습니다</string>

</resources>