<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by "옴마야" Team 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/mash-up-kr/WeQuiz-Android/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/G9">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_result_home"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result_score"
        style="@style/WeQuizTextAppearance.H3.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:includeFontPadding="false"
        android:textSize="64sp"
        app:layout_constraintEnd_toStartOf="@id/tv_result_score_unit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result_score_unit"
        style="@style/WeQuizTextAppearance.Subtitle2.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:includeFontPadding="false"
        android:text="@string/score_unit"
        android:textColor="@color/G1"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_result_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_result_score" />

    <TextView
        android:id="@+id/tv_result_subtitle"
        style="@style/WeQuizTextAppearance.Subtitle2.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:includeFontPadding="false"
        android:text="@string/result_subtitle"
        android:textColor="@color/G4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_score_unit" />

    <TextView
        android:id="@+id/tv_result_title"
        style="@style/WeQuizTextAppearance.Subtitle2.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:includeFontPadding="false"
        android:text="@string/result_title1"
        android:textColor="@color/G1"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_subtitle" />

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_result_fight"
        app:layout_constraintTop_toBottomOf="@id/tv_result_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_result_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/btn_radius_19"
        android:backgroundTint="@color/G8"
        android:gravity="center"
        android:minHeight="0dp"
        android:paddingVertical="7dp"
        android:singleLine="true"
        android:text="@string/result_sign_up"
        android:textAppearance="@style/WeQuizTextAppearance.Base.Bold"
        android:textColor="@color/G3"
        app:layout_constraintBottom_toTopOf="@id/btn_result_retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_result_retry"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_radius_12"
        android:backgroundTint="@color/G6"
        android:text="@string/retry_quiz"
        android:textAppearance="@style/WeQuizTextAppearance.Base.SemiBold"
        android:textColor="@color/G2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_result_share"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_result_share"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_radius_12"
        android:backgroundTint="@color/P1"
        android:text="@string/share_result"
        android:textAppearance="@style/WeQuizTextAppearance.Base.SemiBold"
        android:textColor="@color/G2"
        app:layout_constraintBottom_toBottomOf="@id/btn_result_retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_result_retry"
        app:layout_constraintTop_toTopOf="@id/btn_result_retry" />

</androidx.constraintlayout.widget.ConstraintLayout>