<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by "옴마야" Team 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/mash-up-kr/WeQuiz-Android/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/G9"
    tools:context=".intro.phone.PhoneFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_back_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textAppearance="@style/WeQuizTextAppearance.Subtitle2.Bold"
        android:textColor="@color/G2"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        tools:text="나를 맞춰봐" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/add_nickname"
        android:textAppearance="@style/WeQuizTextAppearance.Title.Bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="37dp"
        android:text="@string/name_require"
        android:textAppearance="@style/WeQuizTextAppearance.Caption2.Medium"
        android:textColor="@color/G2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_name"
        style="@style/WeQuizTextInputLayout.Clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:theme="@style/WeQuizTextInputLayout"
        app:counterEnabled="false"
        app:counterMaxLength="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_input"
            style="@style/WeQuizBasicEditText"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:maxLength="8" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_cancel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tl_name"
        app:layout_constraintEnd_toEndOf="@id/tl_name"
        app:layout_constraintTop_toTopOf="@id/tl_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ad_join_text"
        android:layout_width="282dp"
        android:layout_height="38dp"
        android:layout_marginBottom="28dp"
        app:cardBackgroundColor="@color/G8"
        app:cardCornerRadius="19dp"
        app:layout_constraintBottom_toTopOf="@id/btn_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_ad_join_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/join_ad_text"
            android:textAppearance="@style/WeQuizTextAppearance.Base.Bold"
            android:textColor="@color/G3" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_done"
        style="@style/WeQuizRoundButton"
        android:enabled="false"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
